--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <div class="row header">
+        <div class="row">
           <div class="col-md-4">
             <img src="images/logo/logo.png" alt="AdventureWorks Bicycle Shop" />
           </div>
